disable tests that fail in ci